# JRChain

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: block.h  blockchain.h  pow.h  utils.h
src/: block.cpp  blockchain.cpp  pow.cpp  utils.cpp
